--- a/index.html
+++ b/index.html
@@ -4,19 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script type="module" src="./src/script.js" defer></script>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
-      integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-    <link rel="stylesheet" href="./src/style.css" />
+     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="./src/style.css">
     <title>Countries</title>
   </head>
   <body>
     <header>
-      <div>Where in the world?</div>
+      <h1>Where in the world?</h1>
       <div>
         <i class="fa-solid fa-moon"></i>
         Dark Mode
@@ -31,28 +25,33 @@
           name="search"
           placeholder="Search for a country"
         />
+        
 
         <!--Filter by region dropdown-->
-        <select>
-          <option value="Filter by Region">Filter by Region</option>
-          <option value="Africal">Africa</option>
+        <select id="region-select">
+          <option value="filter by Region">Filter by Region</option>
+          <option value="Africa">Africa</option>
           <option value="Americas">Americas</option>
           <option value="Asia">Asia</option>
           <option value="Europe">Europe</option>
+           <option value="Oceania">Oceania</option>
         </select>
       </div>
 
-      <div id="card-template" style="display: none">
-        <a href="#" class="card-clicable">
-        <img src="" alt="" />
-        <h2 class="country-name"></h2>
-        <ul>
-          <li class="population"></li>
-          <li class="region"></li>
-          <li class="capital"></li>
-        </ul>
-        </a>
-      </div>
+      <br>
+      <template id="card-template">
+        <div id="card">
+          <a href="" >
+            <img src="" alt="" />
+            <h2></h2>
+            <ul>
+              <li id="population"></li>
+              <li id="region"></li>
+              <li id="capital"></li>
+            </ul>
+          </a>
+        </div>
+      </template>
 
       <div id="countries"></div>
     </main>
