--- a/index.html
+++ b/index.html
@@ -1,59 +1,84 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="dark" lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script type="module" src="./src/script.js" defer></script>
-     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="./src/style.css">
+    <!-- Font Awesome for icons -->
+    <script
+      src="https://kit.fontawesome.com/a076d05399.js"
+      crossorigin="anonymous"
+    ></script>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="./src/style.css" />
     <title>Countries</title>
   </head>
-  <body>
-    <header>
-      <h1>Where in the world?</h1>
-      <div>
-        <i class="fa-solid fa-moon"></i>
-        Dark Mode
+  <body class="bg-gray-100 dark:bg-gray-900 text-gray-800 dark:text-gray-100 min-h-screen">
+    <header
+      class="flex items-center text-black justify-between px-6 py-4 shadow-md"
+    >
+      <h1 class="text-xl font-bold">Where in the world?</h1>
+      <div
+        id="dark-mode-toggle"
+        class="flex items-center gap-2 cursor-pointer hover:text-blue-600 transition"
+      >
+        <i class="fas fa-moon"></i>
+        <span>Dark Mode</span>
       </div>
     </header>
-    <main>
-      <div>
-        <i class="fa-solid fa-magnifying-glass"></i>
-        <input
-          type="text"
-          id="search-id"
-          name="search"
-          placeholder="Search for a country"
-        />
-        
+    <main class="px-6 py-8 max-w-7xl mx-auto">
+      <div
+        class="flex flex-col md:flex-row justify-between items-center gap-4 px-6 py-4"
+      >
+        <div class="relative w-full max-w-md">
+          <i
+            class="fa-solid fa-magnifying-glass absolute left-4 top-3 text-gray-500"
+          ></i>
+          <input
+            type="text"
+            id="search-id"
+            name="search"
+            placeholder="Search for a country"
+            class="w-full pl-10 pr-4 py-2 border rounded-md shadow-md focus:outline-none focus:ring-2 focus:ring-blue-500"
+          />
+        </div>
 
-        <!--Filter by region dropdown-->
-        <select id="region-select">
-          <option value="filter by Region">Filter by Region</option>
+        <select
+          id="region-select"
+          class="mt-2 md:mt-0 p-2 border rounded-md shadow-md"
+        >
+          <option value="">Filter by Region</option>
           <option value="Africa">Africa</option>
           <option value="Americas">Americas</option>
           <option value="Asia">Asia</option>
           <option value="Europe">Europe</option>
-           <option value="Oceania">Oceania</option>
+          <option value="Oceania">Oceania</option>
         </select>
       </div>
 
-      <br>
+      <br />
       <template id="card-template">
-        <div id="card">
-          <a href="" >
-            <img src="" alt="" />
-            <h2></h2>
-            <ul>
-              <li id="population"></li>
-              <li id="region"></li>
-              <li id="capital"></li>
-            </ul>
+        <div
+          class="bg-white rounded-md shadow-md overflow-hidden hover:shadow-lg transition"
+        >
+          <a href="" class="block h-full">
+            <img src="" alt="" class="w-full h-48 object-cover" />
+            <div class="p-4">
+              <h2 class="text-lg font-bold mb-2"></h2>
+              <ul class="space-y-1 text-sm text-gray-700">
+                <li class="population"></li>
+                <li class="region"></li>
+                <li class="capital"></li>
+              </ul>
+            </div>
           </a>
         </div>
       </template>
 
-      <div id="countries"></div>
+      <div
+        id="countries"
+        class="grid gap-10 grid-cols-1 sm:grid-cols-2 lg:grid-cols-4"
+      ></div>
     </main>
   </body>
 </html>
