--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
     ></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="./src/style.css" />
-    <title>Countries</title>
+    <title>The Countries</title>
   </head>
-  <body class="bg-gray-100 dark:bg-gray-900 text-gray-800 dark:text-gray-100 min-h-screen">
+  <body class="bg-gray-100 dark:bg-gray-900 text-gray-800 dark:text-gray-100 min-h-screen max-w-7xl mx-auto">
     <header
-      class="flex items-center text-black justify-between px-6 py-4 shadow-md"
+      class="flex items-center text-black justify-between px-6 py-4 shadow-md max-w-7xl mx-auto"
     >
+   
       <h1 class="text-xl font-bold">Where in the world?</h1>
       <div
         id="dark-mode-toggle"
@@ -25,10 +26,11 @@
         <i class="fas fa-moon"></i>
         <span>Dark Mode</span>
       </div>
+    
     </header>
     <main class="px-6 py-8 max-w-7xl mx-auto">
       <div
-        class="flex flex-col md:flex-row justify-between items-center gap-4 px-6 py-4"
+        class="flex flex-col md:flex-row justify-between items-center gap-4"
       >
         <div class="relative w-full max-w-md">
           <i
