--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     ></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="./src/style.css" />
-    <title>The Countries</title>
+    <title>Countries</title>
   </head>
   <body class="bg-gray-100 dark:bg-gray-900 text-gray-800 dark:text-gray-100 min-h-screen max-w-7xl mx-auto">
     <header
