--- a/src/pages/details.html
+++ b/src/pages/details.html
@@ -6,7 +6,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script type="module" src="../details.js" defer></script> 
 
-    <title>Document</title>
+    <title>Country</title>
   </head>
   <body class="bg-gray-100 dark:bg-gray-900 text-gray-800 dark:text-gray-100 min-h-screen max-w-7xl mx-auto">
   <header class="flex items-center text-black justify-between px-6 py-4 shadow-md max-w-7xl mx-auto">
